# officeMCP

./: .gitignore  HANDOFF_REPORT_2026-06-06.md  README.md  count_tools.py  export_tools.py  pyproject.toml  test_create_ppt.py  test_excel_advanced.py  test_excel_mcp.py  test_excel_supplement.py  test_mcp_full.py  test_ppt_advanced.py  test_ppt_mcp.py  test_word_advanced.py  test_word_mcp.py
.github/workflows/: ci.yml  release.yml
docs/: HANDOFF_REPORT_2026-06-06_v2.md  MCP_MULTI_AGENT_TEST_REPORT_2026-06-06.md  implementation-workflow.md  third-version-design.md
docs/superpowers/specs/: 2026-06-03-office-mcp-design.md
src/office_mcp/: __init__.py  compat.py  config.py  server.py  server_excel.py  server_powerpoint.py  server_word.py
src/office_mcp/core/: __init__.py  errors.py  office_manager.py  path_guard.py
src/office_mcp/operations/: __init__.py  excel_ops.py  ppt_ops.py  word_ops.py
src/office_mcp/tools/: __init__.py  excel.py  office.py  powerpoint.py  word.py
src/office_mcp/utils/: icons.py
tests/: conftest.py  test_allowed_dirs_config.py  test_count_tools.py  test_excel_advanced_ops.py  test_excel_tool_resilience.py  test_office_manager.py  test_path_guard.py  test_powerpoint_tool_surface.py  test_ppt_lifecycle_helpers.py  test_ppt_table_merge_restore.py  test_release_metadata.py  test_tool_path_contract.py  test_word_lifecycle_regressions.py  test_word_mail_merge_defaults.py  test_word_ppt_tool_recovery_surface.py
tools/: verify_create_persistence.py
